--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header class="menu-superior">
-        <div class="imagem-shogun">
-            <img src="/assets/shogunimage.png" alt="Imagem-Shogun">
-        </div>
+        <section class="container">
+            <div class="imagem-shogun">
+                <img src="/assets/shogunimage.png" alt="Imagem-Shogun">
+            </div>
+        </section>
     </header>
 
     <main class="conteudo-principal">
