--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="menu-superior">
         <section class="container">
             <div class="imagem-shogun">
-                <img src="/assets/shogunimage.png" alt="Imagem-Shogun">
+                <img src="/assets/shogunimage-2.svg" alt="Imagem-Shogun">
             </div>
         </section>
     </header>
