--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <header class="menu-superior">
+        <nav class="menu-links">
+            <a class="botao-menu" href="index.html">Home</a>
+            <a class="botao-menu" href="about.html">Sobre Nós</a>
+        </nav>
         <section class="container">
             <div class="imagem-shogun">
                 <img src="/assets/shogunimage-2.svg" alt="Imagem-Shogun">
