--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <header class="menu-superior">
-            <nav class="menu-links">
-                <a class="botao-menu" href="index.html">Home</a>
-                <a class="botao-menu" href="about.html">Sobre Nós</a>
-            </nav>
         <section class="container">
             <div class="imagem-shogun">
                 <img src="/assets/shogunimage-2.svg" alt="Imagem-Shogun">
@@ -27,10 +23,10 @@
         </section>
 
         <nav class="link-tree">
-                <a class="botao-um" href="#">FALE CONOSCO</a>
-                <a class="botao-dois" href="#">AGENDE SEU TREINO</a>
-                <a class="botao-tres" href="#">FACEBOOK</a>
-                <a class="botao-quatro" href="#">GMAIL</a>
+                <a class="botao-um" href="https://api.whatsapp.com/send?phone=5541995376611">FALE CONOSCO</a>
+                <a class="botao-dois" href="">AGENDE SEU TREINO</a>
+                <a class="botao-tres" href="https://www.facebook.com/shogunteampinheirinho?mibextid=LQQJ4d">FACEBOOK</a>
+                <a class="botao-quatro" href="mailto:shogunteampinheirinho@gmail.com">GMAIL</a>
         </nav>
     </main>
 </body>
