--- a/index.html
+++ b/index.html
@@ -7,8 +7,35 @@
     <title>Shogun Team</title>
     <link rel="stylesheet" href="/style/style.css">
 </head>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <body>
     <header class="menu-superior">
+        <nav class="menu-links">
+            <a class="laranja" href="index.html">HOME</a>
+            <a class="laranja" href="about.html">SOBRE</a>
+        </nav>
         <section class="container">
             <div class="imagem-shogun">
                 <img src="/assets/shogunimage-2.svg" alt="Imagem-Shogun">
