--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
     </header>
     
     <main class="conteudo-principal">
-        <img src="" alt="htinhashaolin">
+        <div class="imagem-lutador">
+             <img src="/assets/htninha-lutador.png" alt="htinhashaolin">
+        </div>     
     </main>
 </body>
 </html>
