--- a/about.html
+++ b/about.html
@@ -25,6 +25,46 @@
         <div class="imagem-lutador">
              <img src="/assets/htninha-lutador.png" alt="htinhashaolin">
         </div>     
+        <div class="container-about">
+        <section class="alinhamento">
+            <div class="cubo-um">
+                <h1 class="titulo-funcionamento">FUNCIONAMENTO</h1>
+            </div>
+            <div class="cubo-dois">
+                <div class="texto-um">
+                    <h4 class="dia-semana">SEG</h4>
+                </div>
+                <h5 class="horario-semana">07:00 até 11:00 | 14:00 até 22:00</h5>
+            </div>
+            <div class="cubo-tres">
+                <h4 class="dia-semana">TER</h4>
+                <h5 class="horario-semana">18:00 até 22:00</h5>
+            </div>
+            <div class="cubo-quatro">
+                <h4 class="dia-semana">QUA</h4>
+                <h5 class="horario-semana">07:00 até 11:00 | 14:00 até 22:00</h5>
+            </div>
+            <div class="cubo-cinco">
+                <h4 class="dia-semana">QUI</h4>
+                <h5 class="horario-semana">18:00 até 22:00</h5>
+            </div>
+            <div class="cubo-seis">
+                <h4 class="dia-semana">SEX</h4>
+                <h5 class="horario-semana">07:00 até 10:00 | 15:00 até 22:00</h5>
+            </div>
+            <div class="cubo-sete">
+                <h4 class="dia-semana">SAB</h4>
+                <h5 class="horario-semana">09:00 até 10:30</h5>
+            </div>
+            <div class="cubo-oito">
+                <h4 class="dia-semana">DOM</h4>
+                <h5 class="horario-semana">FECHADO</h5>
+            </div>
+            <div class="cubo-nove">
+
+            </div>
+        </section>
+       </div>
     </main>
 </body>
 </html>
