--- a/about.html
+++ b/about.html
@@ -23,6 +23,18 @@
     </header>
     
     <main class="conteudo-principal">
+        <div class="container-local">
+            <div class="botao-localizacao">
+                <i class="bi bi-geo-alt-fill"></i>
+                <div class="conteudo-local">
+                    <h5 class="conteudo-localizacao-um">Rua Luciano Piuzzi, 147 - Pinheirinho</h5>
+                    <h6 class="conteudo-localizacao-dois">Curitiba - PR, 81820-010</h6>
+                    <div class="copy-button">
+                        <i class="bi bi-files"></i>
+                    </div>
+                </div>
+            </div>
+        </div>   
         <div class="container-about">
         <section class="alinhamento">
             <div class="cubo-um">
