--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <div class="conteudo-local">
                     <h5 class="conteudo-localizacao-um">Rua Luciano Piuzzi, 147 - Pinheirinho</h5>
                     <h6 class="conteudo-localizacao-dois">Curitiba - PR, 81820-010</h6>
-                    <div class="copy-button">
+                    <div class="copy-buton">
                     </div>
                 </div>
             </div>
