Update.btn(Copiar)

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Sobre Shogun Team Pinheirinho</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/style/style.css">
+    <script src="/script/script.js"></script>
 </head>
 <body>
     <header class="menu-superior">
@@ -27,9 +28,12 @@
             <div class="botao-localizacao">
                 <i class="bi bi-geo-alt-fill"></i>
                 <div class="conteudo-local">
-                    <h5 class="conteudo-localizacao-um">Rua Luciano Piuzzi, 147 - Pinheirinho</h5>
-                    <h6 class="conteudo-localizacao-dois">Curitiba - PR, 81820-010</h6>
-                    <div class="copy-buton">
+                    <h5 id="texto-um" class="conteudo-localizacao-um">Rua Luciano Piuzzi, 147 - Pinheirinho,</h5>
+                    <div class="copy-container">
+                        <h6 id="texto-dois" class="conteudo-localizacao-dois">Curitiba - PR, 81820-010</h6>
+                            <button id="botao" class="copy-button">
+                                <i class="bi bi-files"></i>
+                            </button>
                     </div>
                 </div>
             </div>
