--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     
     <main class="conteudo-principal">
         <div class="container-local">
-            <div class="botao-localizacao">
+            <div id="btn-lcl" class="botao-localizacao">
                 <i class="bi bi-geo-alt-fill"></i>
                 <div class="conteudo-local">
                     <h5 id="texto-um" class="conteudo-localizacao-um">Rua Luciano Piuzzi, 147 - Pinheirinho,</h5>
